[package]
name = "osrm_interface"
version = "0.1.6"
edition = "2024"
authors = ["Tommi Kabelitz <tommi.kabelitz@gmail.com>"]
publish = false

description = "Interface into osrm-backend, supporting native C++ binding and a wrapper around the HTTP request API"
license = "MIT"
repository = "https://github.com/TommiKabelitz/osrm-interface"
homepage = "https://github.com/TommiKabelitz/osrm-interface"
keywords = ["osrm", "routing", "ffi"]
categories = ["api-bindings", "external-ffi-bindings"]

[features]
default = []
remote = ["serde", "serde_json", "ureq"]
native = ["serde", "serde_json"]


[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
thiserror = "2.0.12"
itertools = "0.14.0"
ureq = { version = "3.1.2", features = ["json"], optional = true }

[build-dependencies]
cc = "1.2.29"
dotenvy = "0.15.7"


[profile.release]
lto = false
