[package]
name = "osrm_interface"
version = "0.8.0"
edition = "2024"
authors = ["Tommi Kabelitz <tommi.kabelitz@gmail.com>"]
publish = true

description = "Interface into osrm-backend, supporting native C++ binding and a wrapper around the HTTP request API"
license = "MIT"
repository = "https://github.com/TommiKabelitz/osrm-interface"
homepage = "https://github.com/TommiKabelitz/osrm-interface"
keywords = ["osrm", "routing", "ffi", "openstreetmap", "webservices"]
categories = ["api-bindings", "external-ffi-bindings"]

[features]
default = []
remote = ["serde", "dep:ureq"]
native = ["serde", "dep:serde_json"]
serde = ["dep:serde"]
debug = []


[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", features = ["raw_value"], optional = true }
thiserror = "2.0.12"
itertools = "0.14.0"
ureq = { version = "3.1.2", optional = true }

[build-dependencies]
cc = "1.2.29"


[dev-dependencies]
rand = "0.9.2"

[profile.release]
lto = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.system-deps]
native = "Requires system libraries: osrm-backend and its dependencies"
